--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <img src="assets/logo.png" alt="personal logo" class="logo">
+        <i class="ri-menu-2-line mobile-btn"></i>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
