--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Project || Contact page</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <img src="assets/logo.png" alt="personal logo" class="logo">
+        <i class="ri-menu-2-line mobile-btn"></i>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
