adding photo gallery to about

--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main class="container">
+    <main class="container forabout">
+        <div class="wrapper">
         <div class="about">
         <img src="assets/Oluwakemi-Atoyebi-profile.jpg" alt="Khemmie's profile picture">
         </div>
@@ -29,6 +30,20 @@
             <p>Currently I am learning the basics of web development and data analytics at TiideLab pre-fellowship cohort 3.0. This is a prelude to the actual fellowship that will be focused on training software engineers for the fintech sector.</p>
             <p>I have successfully scaled the fourth stage and I hope I scale till the end.</p>
         </div>
+    </div>
+    <div class="services-wrapper">
+        <h2>Services I render</h2>
+        <div class="services">
+        <div class="box">
+            <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGFwdG9wJTIwY29kZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="">
+            <h3>Web development</h3>
+        </div>
+        <div class="box">
+            <img src="https://images.unsplash.com/photo-1501618669935-18b6ecb13d6d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fHdyaXRpbmclMjBwYWR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="">
+            <h3>Writing</h3>
+        </div>
+    </div>
+    </div>
     </main>
     <footer>
         <p>&copy;Atoyebi Oluwakemi || Tiidelab Pre-fellowship 3.0</p>
